syntax = "proto3";

package prisma.tms.moc;

message GeoFence {
    string database_id = 1;
}
